@@ -2,10 +2,11 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.07 [20110526] [svn: r175]
+ChangeLog for sdparm-1.07 [20110607] [svn: r176]
   - point out some mode page numbers are vendor specific
-  - LB provisioning + Block limits VPD pages to sbc3r26
+  - LB provisioning + Block limits VPD pages to sbc3r27
   - Enhanced phy control page: optical mode enabled (spl-r07)
+  - Phy control and discover page: sync tp spl2r01)
 
 ChangeLog for sdparm-1.06 [20101031] [svn: r166]
   - allow upper and lower case in field, (mode and vpd) page,
